syntax = "proto3";
option go_package = "credential_pb";
package credential_pb;

import "google/protobuf/struct.proto";
import "template.proto";
import "google/protobuf/timestamp.proto";

message Credential {
    Data data = 1;
    Verification verification = 2;
}

message Data {
    template_pb.Template template = 1;
    string recipient_pub = 2;
    string date_earned = 3;
    google.protobuf.Struct core_data = 4;
}

message Verification {
    string recipient_pub = 1;
    string issuer_pub = 2;
    string signature = 3;
    string proof_of_integrity_hash = 4;
    google.protobuf.Timestamp expiration = 5;
    RevocationStatus revocation_status = 6;
    string ipfs_hash = 7;
}

message RevocationStatus {
    bool isRevoked = 1;
    google.protobuf.Timestamp revokedAt = 2;
}